# svgeditor

./: .gitignore  CMakeLists.txt  README.md
future/: CMakeLists.txt
future/include/: lcanvas.h  lcanvasline.h  lcanvaspolygon.h  lcanvastext.h  lcanvasview.h  mainwindow.h
future/res/: icons.qrc
future/src/: lcanvasitem.cpp  lcanvasline.cpp  lcanvaspolygon.cpp  lcanvasrect.cpp  lcanvasview.cpp  svgcanvasview.cpp
include/: lcanvas.h  lcanvasitem.h  lcanvasview.h  mainwindow.h
old/: CMakeLists.txt
old/include/: lcanvas.h  lcanvasellipse.h  lcanvasitem.h  lcanvasline.h  lcanvaspolygon.h  lcanvasrect.h  lcanvasrectangle.h  lcanvasscene.h  lcanvasshape.h  lcanvastext.h  lcanvasview.h  mainwindow.h  svgcanvasview.cpp  svgcanvasview.h  utility.h
old/src/: lcanvas.cpp  lcanvasellipse.cpp  lcanvasitem.cpp  lcanvasline.cpp  lcanvaspolygon.cpp  lcanvasrectangle.cpp  lcanvasscene.cpp  lcanvasshape.cpp  lcanvastext.cpp  lcanvasview.cpp  main.cpp  mainwindow.cpp  svgcanvasview.cpp  utility.cpp
res/: icons.qrc
res/qss/: light.qss
src/: lcanvasitem.cpp  lcanvasview.cpp  main.cpp  mainwindow.cpp
unit_test/: CMakeLists.txt  unit_test_lcanvasitem.cpp  unit_test_lcanvasitem.h  unit_test_lcanvasview.cpp  unit_test_lcanvasview.h
